--- a/pycharm/docker/Dockerfile
+++ b/pycharm/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:11-jdk-slim
 
+ARG HOST_USER_UID=1000
+ARG HOST_USER_GID=1000
+ARG HOST_USER_NAME=idea
+ARG HOST_GROUP_NAME=idea
 ENV VERSION "2019.2.1"
 
 LABEL maintainer.name="Thanh Nguyen"
@@ -14,17 +18,18 @@ RUN apt update \
         curl tar \
         # PyCharm requirements
         libxext-dev libxrender-dev libxtst-dev libxi-dev libfreetype6-dev python3 fontconfig \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*  \ 
+    && echo 'Creating notroot user and group from host' \
+    && groupadd -g ${HOST_USER_GID}  ${HOST_GROUP_NAME} \
+    && useradd  -u ${HOST_USER_UID} -g ${HOST_USER_GID} -m -d /home/ide  ${HOST_USER_NAME}
+
 
 RUN mkdir -p /opt/idea \
     && curl --fail --silent --show-error https://download-cf.jetbrains.com/python/pycharm-professional-${VERSION}.tar.gz \
     | tar --strip-components=1 -xzC /opt/idea
 
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh && \
-    ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
-
-VOLUME /home/idea/.IntelliJIdea${VERSION}
+USER idea
+VOLUME /home/idea
 VOLUME /workspace
 
 ENTRYPOINT ["/opt/idea/bin/pycharm.sh"]
